fix:project toggle spacing and general page spacing

--- a/app/Homepage/css/landing/landing.css
+++ b/app/Homepage/css/landing/landing.css
@@ -5,7 +5,7 @@
 }
 .landing-container {
   width: 100vw;
-  height: 100%;
+
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
