--- a/app/Homepage/css/projects/project.css
+++ b/app/Homepage/css/projects/project.css
@@ -1,6 +1,7 @@
 .projects-component{
-  z-index: 100;
-  height: 100%;
+  z-index: 50;
+  height: 10vh;
+
 }
 
 
