--- a/app/Homepage/css/projects/projectinfo.css
+++ b/app/Homepage/css/projects/projectinfo.css
@@ -1,10 +1,9 @@
 .projects-content {
     display: flex;
-   
-    width: 100%;
+  
     margin: 1%;
-    height: 100%;
-    border: 1px dotted green;
+
+  
   }
   
   .project-image{
@@ -19,7 +18,6 @@
     flex-direction: column;
     align-items: flex-end;
     overflow-y: hidden;
-    border: 1px dotted green;
     flex-grow: 1;
     
   }
@@ -30,7 +28,6 @@
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
-    border: 1px dotted green;
   
   }
   
